--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.6.3",
     "axios": "^1.4.0",
+    "copy-to-clipboard": "^3.3.3",
     "echarts": "^5.4.2",
     "install": "^0.13.0",
     "js-md5": "^0.7.3",
+    "lodash": "^4.17.21",
     "npm": "^9.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
