--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactdemo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@reduxjs/toolkit": "^1.9.5",
@@ -12,6 +13,7 @@
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "copy-to-clipboard": "^3.3.3",
+    "countup.js": "^2.8.0",
     "echarts": "^5.4.2",
     "install": "^0.13.0",
     "js-md5": "^0.7.3",
