--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactdemo",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "homepage": "./",
   "dependencies": {
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "source-map-explorer": "^2.5.3",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
@@ -34,7 +35,8 @@
     "start": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
